# pyrolizboiler

./: .gitignore  .gitmodules  CMakeLists.txt  boiler.ioc
Inc/: FreeRTOSConfig.h  fsdata_custom.c  lwip.h  lwipopts.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Src/: ethernetif.c  freertos.c  lwip.c  main.c  server.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usbd_conf.c  usbd_desc.c
httpfs/: fsdata.c  index.html  stat.shtml
logic/: acpowerctrl.c  acpowerctrl.h  httpcgi.c  httpcgi.h  servo.c  servo.h
old/: httpserver-netconn.c  server.h
